k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: izboljsajmo-maribor-backend
  labels:
    app: izboljsajmo-maribor-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: izboljsajmo-maribor-backend
  template:
    metadata:
      labels:
        app: izboljsajmo-maribor-backend
    spec:
      containers:
      - name: izboljsajmo-maribor-backend
        image: rg.fr-par.scw.cloud/djnd/izboljsajmo-maribor-backend:latest
        command: ['python', 'manage.py', 'runserver', '0.0.0.0:8000'] # TODO
        ports:
        - name: http
          containerPort: 8000
          protocol: TCP
        livenessProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 10
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /v1/
            port: http
          initialDelaySeconds: 15
          periodSeconds: 30
          timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: izboljsajmo-maribor-backend
spec:
  selector:
    app: izboljsajmo-maribor-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: izboljsajmo-maribor-backend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  tls:
  - hosts:
    - api.izboljsajmo-maribor.k8s.djnd.si
    secretName: izboljsajmo-maribor-backend-tls
  rules:
  - host: api.izboljsajmo-maribor.k8s.djnd.si
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: izboljsajmo-maribor-backend
            port:
              number: 80
